test/corpus/comments.txt
================
A single comment
================

(* This is a comment *)

---

(source_file
    (comment))


============================
A comment and something else
============================

(* Next line is a check *)
check 1 : Nat

---

(source_file
    (comment)
    (check
        (numeral)
        (colon)
        (nat)))
