test/corpus/eval.txt
================================================================================
Eval a numeral
================================================================================

eval 1

--------------------------------------------------------------------------------

(source_file
  (toplevel
    (eval)
    (numeral)))

================================================================================
Eval a numeral of type Nat
================================================================================

eval 1 : Nat

--------------------------------------------------------------------------------

(source_file
  (toplevel
    (eval)
    (numeral)
    (colon)
    (nat)))

================================================================================
Eval a variable
================================================================================

eval x

--------------------------------------------------------------------------------

(source_file
  (toplevel
    (eval)
    (identifier)))

================================================================================
Eval a numeral of type Fin
================================================================================

eval 4 : Fin 5

--------------------------------------------------------------------------------

(source_file
  (toplevel
    (eval)
    (numeral)
    (colon)
    (fin)
    (numeral)))


================================================================================
Two evals
================================================================================

eval 1 : Nat
eval 2 : Nat

--------------------------------------------------------------------------------

(source_file
  (toplevel
    (eval)
    (numeral)
    (colon)
    (nat))
  (toplevel
    (eval)
    (numeral)
    (colon)
    (nat)))


===
Eval an expression in parens
===

eval ((x))

---

(source_file
	(toplevel
		(eval)
		(lparen)
		(lparen)
		(identifier)
		(rparen)
		(rparen)))